# fastapi-realworld-example-app

./: .codecov.yml  .dockerignore  .env.example  .env.sample  .gitignore  .travis.yml  Dockerfile  LICENSE  Procfile  README.rst  alembic.ini  docker-compose.yml  docker_push.sh  entrypoint.sh  pyproject.toml  requirements.txt  runtime.txt  setup.cfg  start_server.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  conduit.yml  deploy.yml  styles.yml  tests.yml
alembic/: env.py
alembic/versions/: 4e62e0d755a8_init.py  72f74c64751b_changing_favorites_table.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: article.py  authenticaion.py  comment.py  profile.py  tag.py  user.py
app/api/dependencies/: articles.py  authentication.py  comments.py  database.py  profiles.py
app/api/errors/: validation_error.py
app/api/routes/: api.py  authentication.py  comments.py  profiles.py  tags.py  users.py
app/api/routes/articles/: api.py  articles_common.py  articles_resource.py
app/core/: config.py  errors.py  events.py  jwt.py  logging.py  security.py  utils.py
app/core/settings/: app.py  base.py  development.py  production.py  test.py
app/crud/: article.py  comment.py  profile.py  shortcuts.py  tag.py  user.py
app/db/: database.py  db_utils.py  errors.py  events.py  mongodb.py  mongodb_utils.py
app/db/migrations/: env.py  script.py.mako
app/db/migrations/versions/: fdf8821871d7_main_tables.py
app/db/queries/: queries.py  queries.pyi  tables.py
app/db/queries/sql/: articles.sql  comments.sql  profiles.sql  tags.sql  users.sql
app/db/repositories/: articles.py  base.py  comments.py  profiles.py  tags.py  users.py
app/models/: article.py  comment.py  common.py  dbmodel.py  dtconfig.py  profile.py  rwmodel.py  tag.py  token.py  user.py
app/models/domain/: articles.py  comments.py  profiles.py  rwmodel.py  users.py
app/models/schemas/: articles.py  comments.py  jwt.py  profiles.py  rwschema.py  tags.py  users.py
app/resources/: strings.py
app/services/: articles.py  authentication.py  comments.py  jwt.py  security.py
docker/: entrypoint.sh
postman/: Conduit.postman_collection.json  run-api-tests.sh
scripts/: format  lint  test  test-cov-html
tests/: conftest.py  fake_asyncpg_pool.py  test_main.py  testing_helpers.py
tests/api/api_v1/: test_update_current_user.py
tests/test_api/test_errors/: test_422_error.py  test_error.py
tests/test_api/test_routes/: test_articles.py  test_authentication.py  test_comments.py  test_login.py  test_profiles.py  test_registration.py  test_tags.py  test_users.py
tests/test_db/test_queries/: test_tables.py
tests/test_schemas/: test_rw_model.py
tests/test_services/: test_jwt.py
